--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,16 @@
 
 
 Body {
-    background-color: whitesmoke;
+    background-color: AntiqueWhite;
 }
 header{
     background-color: darkseagreen;
     padding: 10px;
+}
+nav {
+    font-size: 40px;
+    background-color: darkseagreen;
+    text-align: center;
 }
 
 h1 {
@@ -13,25 +18,43 @@ h1 {
     text-align: center;
 }
 
+h2 {
+   font-size: 35px;
+}
+
 a:visited {
     background-color:darkseagreen;
-    
+    color: LightYellow;
 }
  
 a:hover {
     background-color: lightgreen;
    
 }
+
 a:link {
     background-color: darkseagreen;
     text-decoration: none;
+  color: lightyellow;
 }
 
 a:active {
     background-color: darkseagreen;
 }
 
-nav {
-    font-size: 50px;
+img{
+  height: 500px;
+}
+
+.Pic1 {
+    font-size: 20px;
     
+}
+
+img {
+ float: right;
+    height: 400px;
+    width: 500px;
+   border-radius: 50px;
+    b
 }
