--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,18 @@ img {
    border-radius: 50px;
     b
 }
+
+.flex-container {
+  display:flex;
+  flex-direction: column;
+font-size: 25px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    background-color: darkseagreen;
+}
+
+.Members {
+    text-decoration: underline
+        
+}
