--- a/css/style.css
+++ b/css/style.css
@@ -67,4 +67,11 @@ h3 {
 .Map {
     
    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+h4 {
+    font-size: 35px;
+    text-align: center;
 }
