--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ h1 {
 
 h2 {
    font-size: 35px;
+    text-align: center;
     
 }
 
@@ -44,19 +45,14 @@ a:active {
 }
 
 img{
-  height: 500px;
-}
-
-.Pic1 {
-    font-size: 20px;
     
 }
 
-img {
- float: right;
-    height: 400px;
-    width: 500px;
-   border-radius: 50px;
+
+.Pac1 {
+    font-size: 25px;
+    
+}
     
 }
 
@@ -74,4 +70,52 @@ h3 {
 h4 {
     font-size: 35px;
     text-align: center;
+}
+
+.flex-container {
+    display: flex;
+  flex-direction: column;
+text-align: center;
+    font-size: 25px;
+    border: solid 10px darkseagreen;
+}
+
+.members {
+text-decoration: underline;
+    font-size: 60px;
+    border: solid 10px darkseagreen;
+}
+ 
+.pic1 {
+    float: right;
+    height: 400px;
+    width: 500px;
+   border-radius: 50px;
+}
+
+.pic2 {
+ float: left;
+    height: 600px;
+    width: 500px;
+   border-radius: 50px;
+}
+
+.pac2 {
+    font-size: 25px;
+}
+
+
+#myBtn {
+    background-color: darkseagreen;
+    position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+    color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
 }
