--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ a:active {
 text-align: center;
     font-size: 25px;
     border: solid 10px darkseagreen;
-=======
+}
 img{
     
 }
@@ -106,16 +106,14 @@ img{
     font-size: 25px;
     
 }
-    
->>>>>>> 9e14ec0c4687c5166c561aa5e79acd1d323793af
-}
+
 
 .members {
 text-decoration: underline;
     font-size: 60px;
     border: solid 10px darkseagreen;
     
-<<<<<<< HEAD
+
    width: 50%;
     margin-left: auto;
     margin-right: auto;
@@ -124,13 +122,7 @@ text-decoration: underline;
 h4 {
     font-size: 35px;
     text-align: center;
-=======
->>>>>>> 8ecc0e1026ca2618efa3609b089c3e56db471eba
 }
-
-<<<<<<< HEAD
-
-=======
 .flex-container {
     display: flex;
   flex-direction: column;
@@ -165,26 +157,35 @@ text-decoration: underline;
 
 
 #myBtn {
-    background-color: darkseagreen;
-    position: fixed;
+  
+  position: fixed;
   bottom: 20px;
   right: 30px;
   z-index: 99;
   font-size: 18px;
   border: none;
   outline: none;
-    color: white;
+  background-color: green;
+  color: white;
   cursor: pointer;
   padding: 15px;
   border-radius: 4px;
-}
+    }
+    
+    
+    #myBtn:hover {
+  background-color: grey;
+    }
+    
 .school {
     font-size: 30px;
     text-align: center;
     
 }
 
->>>>>>> 9e14ec0c4687c5166c561aa5e79acd1d323793af
+    @font-face {
+   font-family:'Fira Sans Extra Condensed', sans-serif;
 
-
-
+    }
+   
+    
